maze.lessons.maze.island.IslandMaze.scala.error
Escaper:7: error: not found: value random3
    	hasard=random3()
               ^